infrastructure/config/sonarqube/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    app.kubernetes.io/name: sonarqube
